# translatorx-v3

./: .coverage  .gitignore  CLAUDE.md  README.md  demo_test.srt  pyproject.toml
benchmark/: validate_subtitles.py
config/pipelines/: standard_translate.yaml
config_yaml/: default_en_ja.yaml  default_en_ko.yaml  default_en_zh.toml  default_en_zh.yaml  default_zh_en.yaml  lenient_en_zh.yaml  llm_response.yaml  subtitle_line.yaml
demos/: README.md  _bootstrap.py  _demo_shared.py  _print.py  _shared.py  demo_advanced.py  demo_advanced_features.py  demo_app.py  demo_batch_preprocess.py  demo_batch_translate.py  demo_checker.py  demo_course_batch.py  demo_lang_ops.py  demo_live.py  demo_llm_ops.py  demo_media.py  demo_pipeline.py  demo_preprocess_pipeline.py  demo_service.py  demo_stream_scenarios.py  demo_streaming.py  demo_subtitle.py  demo_tenant_scheduler.py  demo_ws_client.py  report_srt_clean.py  verify_srt_clean.py
demos/basics/: checker.py
demos/batch/: advanced.py  multilingual.py  preprocess.py  transcribe.py
demos/course_batch/: __main__.py  _shared.py  demo_preprocess.py  demo_sentence.py  (+2 more)
docs/: ADAPTER_BACKENDS_GUIDE.md  ARCHITECTURE_LAYERS.md  ARCHITECTURE_SCALING.md  PREPROCESS_GUIDE.md  README.md  plugin_sdk.md  srt-issues.md  streaming.md
frontend/: README.md  dev-app.yaml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
tests/: ruff.toml  test_architecture.py
tools/: inspect_any.py  inspect_srt.py  inspect_whisperx.py  migrate_storage.py  report_srt_clean.py  report_whisperx_clean.py  verify_srt_clean.py
(+884 files in other folders)
