[tool.pytest.ini_options]
pythonpath = ["src"]

[project]
name = "translatorx"
version = "0.3.0"
description = "Subtitle translation platform (Hexagonal / Ports & Adapters)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "pillow>=10",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "redis>=5.0",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "fakeredis[lua]>=2.20",
]

[project.scripts]
translatorx-serve = "api.service.__main__:main"

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = ["F541", "E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
